# CogOpsCB_mastra

./: .env.example  .gitignore  QUERY_FLOW_TRACE.md  README.md  api.py  api_v1.py  api_v2.py  app.py  evaluate.py  govtchat.service  issue and idea.md  raw_tool_outputs.md  report.md  setup.py  user_query_examples.md
configs/: config.yml  jiggasha.md  v2.yaml
docs/: AGENTS.md  CONFIG.md  EVENTS.md  LLM.md  PROMPTS.md  VERIFIER.md  api-ref_jiggasha.md  api_flow.md  api_referemce_wiki.md  architecture_orchestrator.md  graph.md  tool_usage_guide.md  user_flow.md  v2_debug.md
ingestion/: ingest_data.py
jiggasha/: API_REFERENCE.md  README.md  category_index.md  config.yml  data.csv  embedder.py  generate_wiki_chunks.py  ingest.py  instruction.py  jiggasha-search.service  process.py  rerank.py  reranker.py  search_results.json  service.py  test_check.py  verify.py
jiggasha_service/: config.yml  env.example  pyproject.toml
jiggasha_service/knowledge_gatherer/: __init__.py  agent.py  config.py  embedder.py  fact_checker.py  models.py  reranker.py  retriever.py  server.py
mastra/: README.md  package-lock.json  package.json
tests/: _classifier.py  conftest.py  query_categories.yml  run_queries.py  run_tests.py  test_api_integration.py  test_config_loader.py  test_core.py  test_embedder.py  test_events.py  test_graph_tools.py  test_grounding.py  test_input_handling.py  test_llm_expander.py  test_multi_user.py  test_normalize.py  test_orchestrator.py  test_pipeline.py  test_query_expand.py  test_reasoning_loop.py  test_registry.py  test_session.py  test_system_prompt.py  (+3 more)
(+152 files in other folders)
